Fix code on assignment 3

--- a/02_assignments/lab-03.qmd
+++ b/02_assignments/lab-03.qmd
@@ -2,9 +2,18 @@
 title: "Lab 3: Introduction to R"
 format: html
 editor: visual
+execute: 
+  echo: true
 ---
 
 ## Outline
+
+```{r}
+#| echo: false
+#| eval: true
+knitr::opts_chunk$set(comment = NA)
+
+```
 
 ### Objectives
 
@@ -30,7 +39,7 @@ For this assignment, the only thing you will turn in on Canvas is a brief write 
 
 ## Working in RStudio
 
-![](images/rstudio_panes.png){fig-align="center"}
+![](images/rstudio_panes.png){fig-align="center" fig.alt = "Labeled Panes of RStudio"}
 
 If you are going to do anything with R, [RStudio](https://rstudio.com/) is hands-down the best place to do it. RStudio is an open-source integrated development environment (or IDE) that makes programming in R simpler, more efficient, and most importantly, more reproducible. Some of its more user-friendly features are syntax highlighting (it displays code in different colors depending on what it is or does, which makes it easier for you to navigate the code that you've written), code completion (it will try to guess what code you are attempting to write and write it for you), and keyboard shortcuts for the more repetitive tasks.
 
@@ -78,6 +87,7 @@ You need to tell R what file folder you will be working out of. You can do this 
 2\. Type the following code, but instead of `your_file_path` type the actual folder. Make sure your slashes are forward slashes ( / ) and not back slashes ( \\ ).
 
 ```{r}
+#| echo: true
 #| eval: false
 setwd("your_file_path")
 ```
@@ -85,6 +95,7 @@ setwd("your_file_path")
 For example, in my script I will type the following, since that's the folder I'm keeping my data in.
 
 ```{r}
+#| echo: true
 #| eval: false
 setwd("G:/My Drive/Classes/2023_Spring_ECON_355_Regression/Week 4 - Descriptive Statistics Continued")
 ```
@@ -97,7 +108,7 @@ Now that R knows where we have the data stored, we can load the data in.
 house <- read.csv("data/house_prices.csv")
 ```
 
-Note that I have my data in a subfolder of my working directory called "Data". Your code may look more like this:
+Note that I have my data in a subfolder of my working directory called "data". Your code may look more like this:
 
 ```{r}
 #| eval: false
@@ -106,7 +117,7 @@ house <- read.csv("house_prices.csv")
 
 This tells R to read in the csv and call the data frame "house". You should see the data pop up in your environment. You can click on the word "house" and it will open up the data in the data viewer for you to explore. Or, if you just want a quick look, you can hit the little blue circle with the arrow next to the word "house".
 
-![](images/ways-to-view-data.PNG){fig-alt="Ways to view data"}
+![](images/ways-to-view-data.PNG){fig-alt="data viewing in the environment pane"}
 
 We can also ask R to print the first few lines of a dataframe to show us what it looks like. In this case, each row represents a house.
 
@@ -374,7 +385,7 @@ Now it's time to work on your own. Download the "County_Election.csv" data set f
 Here is a table describing the variables in the data set:
 
 | Name                         | Description                                                                                                  |
-|------------------------------|--------------------------------------------------------------------------------------------------------------|
+|-----------------|------------------------------------------------------|
 | state                        | State FIPS Code                                                                                              |
 | county                       | County FIPS Code                                                                                             |
 | county_name                  | County Name                                                                                                  |
