Change lab4 to html

--- a/02_assignments/lab-04.qmd
+++ b/02_assignments/lab-04.qmd
@@ -1,5 +1,6 @@
 ---
-title: "Lab 4 - ggplot and Data Manipulation"
+title: "Lab 4: ggplot and Data Manipulation"
+format: html
 editor: visual
 execute: 
   echo: true
