--- a/02_assignments/mini_lab-ttests.qmd
+++ b/02_assignments/mini_lab-ttests.qmd
@@ -30,52 +30,96 @@ data("USArrests")
 
 If the data does not immediately show up in your environment, it might just need a little more time, or you might need to call the data first with a function. Try `head(USArrests)`.
 
+The data has 4 variables for 1973: the arrest rates for murder, assault, and rape, and the percent of each state's population that is urban.
+
 ## Hypothesis testing
 
-Suppose I heard that in 2021, the arrest rate for assault was 135 per 100,000. I want to see if the average state-level rate 1973 was significantly different from that at the 99% confidence level. a. Write down the null and alternative hypotheses. b. Use the following function to do the hypothesis test:
+### Example
+
+Suppose I read an article that said that in 1973, the average percent urban in each state was 62 percent. I want to check that with this dataset with $\alpha = 0.05$. Here is how I would do it in R:
+
+**1) Write down the null and alternative hypotheses.**
+
+$$
+H_0: \mu = 62
+$$
+
+$$
+H_A: \mu \neq 62
+$$
+
+**2) Do the hypothesis test.** I will use the following function in R.
 
 ```{r}
-t.test(mydata, alternative, mu, conf.level)
+t.test(mydata$variable, alternative, mu, conf.level)
 ```
 
-Where "mydata" is your data; "alternative" can take on one of three values: "two.sided", "greater", "less"; mu is $\mu$; and conf.level is $(1-\alpha)$. As an example, check out this hypothesis test for stock data:
+Where "mydata" is your data; "variable" is the variable you want to test; "alternative" can take on one of three values: "two.sided", "greater", "less"; mu is $\mu$; and conf.level is $(1-\alpha)$. I'll plug in my values:
 
 ```{r}
-t.test(stock, alternative = "two.sided", mu = 170, conf.level = 0.95)
+#| eval: true
+
+t.test(USArrests$UrbanPop, alternative = "two.sided", mu = 62, conf.level = 0.95)
 ```
 
-c.  Write down your conclusion.
+**3) Conclude.** The p-value of 0.09 is greater than our significance level of 0.05. The p-value says that if the null hypothesis were true and the actual mean were 62, the probability we would see the data we do is 9%. That is likely enough that we don't have enough evidence to reject the null hypothesis. The data do not provide enough evidence to say that the mean of 62 is not true.
+
+### Exercise
+
+Suppose I heard that in 2021, the arrest rate for assault was 135 per 100,000. I want to see if the average state-level rate 1973 was significantly different from that at the 99% confidence level.
+
+a\. Write down the null and alternative hypotheses.
+
+b\. Perform the t test.
+
+c\. Write down your conclusion.
 
 ## Creating a dummy variable
 
-I want to break the data into two groups: states with a high urban population, and states with a low urban population. `UrbanPop` is a variable that says the percent of the state which is urban. If I run the code:
+### Example
+
+Suppose I want to compare two groups of states: states in the west, and states not in the west. I need to create a **dummy variable**, which is a variable that equals one if a condition is true, and zero if it is not. The easiest way to do this in R is with `ifelse()`. The function `ifelse()` takes 3 arguments: the first is a test on a variable in the dataset, the second is the value the new variable will take if the test is true, and the third is the value the new variable will take if the test is false.
+
+```{r}
+USArrests$west <- ifelse(rownames(USArrests) %in% c("California", "Washington", "Oregon", "Idaho", "Utah", "Nevada", "Arizona", "New Mexico", "Montana", "Wyoming", "Colorado"), 1, 0)
+```
+
+The row names in this dataset are the name of the state. This code tests whether the row name is one of the states in the list, and if it is, then it assigns a 1 to the new variable `west`.
+
+### Exercise
+
+Break the data into two groups: states with a high urban population, and states with a low urban population. `UrbanPop` is a variable that says the percent of the state which is urban. The following code tells us some summary statistics:
 
 ```{r}
 summary(USArrests$UrbanPop)
 ```
 
-I see that the median percent urban is 66. I will choose that as my cutoff for urban versus non-urban. To create a variable that equals 1 if the state is urban, and 0 if it's not, I will use the code:
+The median percent urban is 66. Use that as the cutoff for urban versus non-urban. Use `ifelse()` to create a variable that equals 1 if the `UrbanPop` variable is greater than 66, and 0 if it is not.
 
 ```{r}
+#| eval: true
+#| echo: false
 USArrests$urban <- ifelse(USArrests$UrbanPop > 66, 1, 0)
 ```
 
 ## Two sample t tests
 
-In the examples we've done so far, we test our sample mean against the mean for a larger population or theoretical distribution. Sometimes, we want to test whether two groups are different based on two different samples. In this case, I want to know if murder rates are higher in "urban" states, so a two-sample t-test is appropriate.
+### Example
+
+In the examples we've done so far, we test our sample mean against the mean for a larger population or theoretical distribution. Sometimes, we want to test whether two groups are different based on two different samples. I will test whether states in the west have significantly lower murder rates.
 
 Hypothesis testing for two samples is slightly different, and the calculation for t is slightly different.
 
-a.  Write down hypotheses. $$ H_0: \mu_{urban} \leq \mu_{non-urban} $$ $$ H_1: \mu_{urban} > \mu_{non-urban} $$ Which is equivalent to: $$ H_0: \mu_{urban} - \mu_{non-urban} \leq 0$$ $$ H_1: \mu_{urban} - \mu_{non-urban} > 0 $$
+a.  **Write down hypotheses.** $$ H_0: \mu_{west} \geq \mu_{non-west} $$ $$ H_1: \mu_{west} < \mu_{non-west} $$ Which is equivalent to: $$ H_0: \mu_{west} - \mu_{non-west} \leq 0$$ $$ H_1: \mu_{west} - \mu_{non-west} > 0 $$
 
-b.  Perform the t test. If I were to be calculating this by hand, the formula would be: $$ t= \frac{(\bar x_{urban}-\bar x_{non-urban})-(\mu_{urban}-\mu_{non-urban})}{{\sqrt{\frac{s_{urban}^2}{n_{urban}} + \frac{s_{non-urban}^2}{n_{non-urban}} }}}$$ If you are interested, you can calculate this on your own. The degrees of freedom would be $df = n_{urban} + n_{non-urban}-2$.
+b.  **Perform the t test.** If I were to be calculating this by hand, the formula would be: $$ t= \frac{(\bar x_{west}-\bar x_{non-west})-(\mu_{west}-\mu_{non-west})}{{\sqrt{\frac{s_{west}^2}{n_{west}} + \frac{s_{non-west}^2}{n_{non-west}} }}}$$ If you are interested, you can calculate this on your own. The degrees of freedom would be $df = n_{west} + n_{non-west}-2$.
 
 I could calculate the mean, standard deviation, and sample size for each group like so:
 
 ```{r}
-mean(USArrests$Murder[USArrests$urban == 1])
-sd(USArrests$Murder[USArrests$urban == 1])
-length(USArrests$Murder[USArrests$urban == 1])
+mean(USArrests$Murder[USArrests$west == 1])
+sd(USArrests$Murder[USArrests$west == 1])
+length(USArrests$Murder[USArrests$west == 1])
 ```
 
 However, we can use the t test formula in R as well. The formula for two-sample t tests is:
@@ -84,4 +128,20 @@ However, we can use the t test formula in R as well. The formula for two-sample 
 t.test(data1, data2, alternative, conf.level)
 ```
 
-The data you want to compare are different rows in the same dataframe. You will have to subset your data, either within the formula using brackets, or by making new data frames using brackets or `dplyr`. c. Write down your conclusions.
+The data you want to compare are different rows in the same dataframe. You will have to subset your data, either within the formula using brackets, or by making new data frames using brackets or `dplyr`.
+
+In this case, I would use the code:
+
+```{r}
+t.test(USArrests$Murder[USArrests$west == 1],
+       USArrests$Murder[USArrests$west == 0],
+       "less", conf.level = 0.95)
+```
+
+I use "less" because I'm doing a one-sided hypothesis test. If I were doing a one-sided hypothesis the other way, I would use "greater".
+
+c.  **Write down your conclusions.** The p-value is 0.1374. This means that there is a 13.74% chance we'd observe the data we do if the null hypothesis were true. This is higher than our significance level of 5%, so we fail to reject the null hypothesis. There is not sufficient evidence to say that murder arrest rates in the west are less than murder arrest rates in non-western states.
+
+### Exercise
+
+Try doing a two sample t-test to see whether more urban states (states with more than the median percent urban, like the dummy variable) have higher murder rates than less-urban states.
